--- a/statefulset.yml
+++ b/statefulset.yml
@@ -1,10 +1,9 @@
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: bloodbank-statefulset
 spec:
-  serviceName: "bloodbank-service"
+  serviceName: bloodbank-service
   replicas: 1
   selector:
     matchLabels:
@@ -15,31 +14,27 @@ spec:
         app: database
     spec:
       containers:
-      - name: "mysqldb"
-        image: shaikmustafa/mybloodbank:db
-        ports:
-        - containerPort: 3306
-        envFrom:
-        - configMapRef:
-            name: bloodbank-cm
-        - secretRef:
-            name: bloodbank-secret
-        resources:
-          requests:
-            cpu: "250m"
-            memory: "256Mi"
-          limits:
-            cpu: "500m"
-            memory: "512Mi"
-        volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /usr/share/nginx/html
-  volumeClaimTemplates:
-  - metadata:
-      name: mysql-persistent-storage
-    spec:
-      accessModes: 
-      - ReadWriteOnce
-      resources:
-        requests:
-          storage: 1Gi
+        - name: mysqldb
+          image: shaikmustafa/mybloodbank:db
+          ports:
+            - containerPort: 3306
+          envFrom:
+            - configMapRef:
+                name: bloodbank-cm
+            - secretRef:
+                name: bloodbank-secret
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
+          volumeMounts:
+            - name: mysql-persistent-storage
+              mountPath: /usr/share/nginx/html/
+
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: pvc-1
