--- a/netpol.yml
+++ b/netpol.yml
@@ -1,4 +1,3 @@
----
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
@@ -10,26 +9,33 @@ spec:
   policyTypes:
   - Ingress
   - Egress
+
   ingress:
   - from:
-    - podSelector:
+    - namespaceSelector:
         matchLabels:
-          app.kubernetes.io/component: controller # Allow ingress from the Ingress Controller
+          kubernetes.io/metadata.name: ingress-nginx
+      podSelector:
+        matchLabels:
+          app.kubernetes.io/component: controller
     ports:
     - protocol: TCP
       port: 80
+
   egress:
   - to:
     - podSelector:
         matchLabels:
-          app: database # Allow egress to the database pods
+          app: database   # match your DB label correctly
     ports:
     - protocol: TCP
       port: 3306
+
   - to:
-    - podSelector:
+    - namespaceSelector:
         matchLabels:
-          app.kubernetes.io/name: kube-system # Allow egress to Kubernetes system components
+          kubernetes.io/metadata.name: kube-system
     ports:
     - protocol: UDP
       port: 53
+
