--- a/statefulset.yml
+++ b/statefulset.yml
@@ -32,9 +32,15 @@ spec:
               memory: "512Mi"
           volumeMounts:
             - name: mysql-persistent-storage
-              mountPath: /usr/share/nginx/html/
+              mountPath: /usr/share/nginx/html
 
-      volumes:
-      - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: pvc-4
+  volumeClaimTemplates:
+    - metadata:
+        name: mysql-persistent-storage
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        storageClassName: kops-csi-1-21
+        resources:
+          requests:
+            storage: 1Gi
